Updating to v3.2.0